# showcase.2dkinematics

./: CMakeLists.txt  main.cpp
Arm/: Arm.cpp  Arm.h
Game/: Game.cpp  Game.h
Joint/: Joint.cpp  Joint.h
Link/: Link.cpp  Link.h
Motion/: Motion.cpp  Motion.h
